# flow-

./: package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.mjs
electron/: main.cjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: auth.js  desktopAuth.js  env  env.js  microsoftAuth.js  webAuth.js
src/lib/components/: CreateItemPopup.svelte  EntityCalendar.svelte  EventNotification.svelte  EventPopup.svelte  FeedbackPopup.svelte  LinkOptionsPopup.svelte  LoadingScreen.svelte  Sidebar.svelte
src/lib/services/: calendarService.js  notificationService.js
src/lib/stores/: popupStore.js  sidebarStore.js
src/routes/: +layout.svelte  +page.svelte  Header.svelte
src/routes/entity/[id]/: +page.svelte
src/routes/folder/[id]/: +page.svelte
src/routes/forgot-password/: +page.svelte
src/routes/login/: +page.svelte
src/routes/notepad/: +page.svelte
src/routes/reset-password/: +page.svelte
src/routes/signup/: +page.svelte
static/: notification-worker.js  tutorial.js
